--- a/mp-master.css
+++ b/mp-master.css
@@ -1,13 +1,79 @@
+/*
+Colour Palette Option #2
+
+Dark mint: #006b64
+Spearmint: #008d7e
+Grassy mint: #00b273
+Mint: #b3d78b
+*/
+
 /* Hide the default theme stuff we don't want to see.*/
-#header-below,#role-credits {
+#header-below,
+#role-credits {
   display: none;
+}
+
+.section-header {
+  display: none;
+}
+
+/* Global elements and styles */
+
+input[type="text"]:focus,
+#top-search input#s:focus {
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  border-color: rgba(0, 178, 115, 0.8);
+  outline: 0;
+  outline: thin dotted 9;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0, 178, 115, 0.6);
+  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0, 178, 115, 0.6);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0, 178, 115, 0.6);
+}
+
+/* search form */
+
+#top-search {
+  position: relative;
+}
+
+
+
+#top-search,
+#top-nav ul {
+  position: absolute;
+  right: -10px;
+}
+
+#top-search {
+  bottom: 90px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  background: #fff;
+}
+
+#top-search input#s {
+  padding-bottom: 0;
+  width: 191px;
+  color: #006b64 !important;
+}
+
+#top-search input#search-submit {
+  position: absolute;
+  z-index: 99;
+  right: 0;
 }
 
 #top-nav ul {
   float: none;
   position: absolute;
-  bottom: 30px;
-  right: -10px;
+  bottom: 10px;
+}
+
+form .button, #footer, #site-info, #top-search input#s:focus, .flex-caption, .light-on-dark, .light-on-none, .pagenavi a:hover {
+  text-shadow: none;
 }
 
 /* Header section overrides */
@@ -16,24 +82,46 @@
   width: 214px;
 }
 
+#site-info {
+  padding-bottom: 0;
+}
+
 .menu {
   border-bottom: 1px solid #fff;
   border-top: 1px solid #fff;
 }
 
 #top-nav {
-  font-size: 18px;
+  font-size: 16px;
 }
 
 #top-nav ul {
-  background: none;
-  box-shadow: none;
-  -webkit-border-radius: 0;
-  -moz-border-radius: 0;
-  border-radius: 0;
+  /* Reset theme default border, radii? Is that how you say it? */
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+/*
+  -webkit-border-top-right-radius: 5px;
+  -webkit-border-top-left-radius: 5px;
+  -moz-border-top-right-radius: 5px;
+  -moz-border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  border-top-left-radius: 5px;
+*/
+  text-shadow: 0 -1px 0 rgba(0,0,0,0.25);
+  background-color: #5bb75b;
+  background-image: -moz-linear-gradient(top,#008d7e, #006b64);
+  background-image: -webkit-gradient(linear,0 0,0 100%,from(#008d7e),to(#006b64));
+  background-image: -webkit-linear-gradient(top,#008d7e,#006b64);
+  background-image: -o-linear-gradient(top,#008d7e,#006b64);
+  background-image: linear-gradient(to bottom,#008d7e,#006b64);
+  background-repeat: repeat-x;
+  border-color: #006b64 #006b64;
+  border-color: rgba(0,0,0,0.1) rgba(0,0,0,0.1);
+  border-bottom: 0;
 }
 
-#top-nav ul::before,
+/*
 #top-nav ul::after {
   content: '';
   position: absolute;
@@ -42,10 +130,7 @@
   width: 100%;
   height: 1px;
 }
-
-#top-nav ul::before {
-  top: -2px;
-}
+*/
 
 #top-nav ul::after {
   bottom: -2px;
@@ -53,25 +138,42 @@
 
 #top-nav ul li {
   border: none;
+  border-left: 1px solid rgba(0,0,0,0.3);
+}
+
+#top-nav ul li:first-child {
+  border-left: none !important;
 }
 
 #top-nav ul li a {
-  color: #666;
-  text-shadow: 0 1px 0 #fff;
+  color: #fff;
+  font-weight: 300;
+  text-shadow: 0 1px 0 rgba(0,0,0,0.5);
 }
 
 #top-nav li:hover,
 #top-nav ul li a:hover,
 #top-nav .current_page_item a {
   background: none !important;
-  background: none !important;
-  color: #634a39;
+  color: #b3d78b;
 }
 
 /* Main content block */
 
+#hero {
+  box-shadow: 0 0 15px rgba(0,0,0,0.4);
+  border: 5px solid #000;
+}
+
+#hero .entry-background, #primary-nav, #primary-nav li:hover, input#search-submit, .multiple .entry, #page-header-container {
+  -webkit-border-radius: 0 !important;
+  -moz-border-radius: 0 !important;
+  border-radius: 0 !important;
+}
+
 #main-container {
   position: relative;
+  background: none;
 }
 
 #main-container::after {
@@ -93,8 +195,67 @@
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
 }
 
+.section-layout {
+  background: none;
+}
+
+.grid-view .section-content,
+.list-view .section-content {
+  border-top: 1px solid rgba(0,0,0,0.2);
+  border-bottom: 1px solid rgba(0,0,0,0.2);
+  position: relative;
+}
+
+/*  Thumbnails  */
+
+.entry-thumbnail {
+  background: rgba(0, 178, 115, 0.6);
+  border: 1px solid rgba(255,255,255,0.7);
+}
+
+/* Footer styles */
+
+#footbar {
+  background: none;
+  background-color: rgba(255,255,255,0.3);
+}
+
+
+
+/*
+.grid-view .section-content::before,
+.list-view .section-content::before,
+.grid-view .section-content::after,
+.list-view .section-content::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  display: block;
+  background: rgba(255,255,255,0.8)
+}
+
+.grid-view .section-content::before,
+.list-view .section-content::before {
+  top: 0;
+}
+
+.grid-view .section-content::after,
+.list-view .section-content::after {
+  top: 0;
+}
+*/
 
 /* Responsive styles */
+
+@media only screen and (max-width: 959px) and (min-width: 768px) {
+
+  #top-nav {
+    font-size: 13px;
+  }
+
+}
+
 @media only screen and (max-width: 767px) {
 
   #header-below {
